sol/2016_ps_f2_times.txt
Times
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,2 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2016f2ps_times.cpp: In function ‘int main()’:
2016f2ps_times.cpp:34:5: error: ‘sort’ was not declared in this scope; did you mean ‘short’?
   34 |     sort(team1.begin(), team1.end());
      |     ^~~~
      |     short
